Revision history for Capture-Tiny

{{$NEXT}}

0.36      2016-02-28 21:36:57-05:00 America/New_York

  [Docs]

  - Fixed typos.

0.34      2016-02-18 23:26:13-05:00 America/New_York

  [Fixed]

  - Removed spurious JSON::PP dependency added by a broken
    Dist::Zilla plugin.

0.32      2016-02-18 10:12:02-05:00 America/New_York

  [Docs]

  - Changed internal formatting of documentation

  [Changes]

  - No functional changes from 0.31

0.31      2016-02-14 07:33:50-07:00 America/Mazatlan (TRIAL RELEASE)

  [Fixed]

  - Application of layers to handles during and after capture now attempts
    to more accurately duplicate the original layers, including potential
    duplicate layers.  Because of the unusual ways that layers are ordered
    and applied, exact duplication is not guaranteeed, but this should be
    better that what Capture::Tiny did before.

  - Avoids a hard crash on Windows with Perl < 5.20 if a fork occurs in a
    capture block.  Also documented the risks and lack of support for
    forks in capture blocks.

0.30      2015-05-15 20:43:54-04:00 America/New_York

  No changes from 0.29

0.29      2015-04-19 18:36:24+02:00 Europe/Berlin (TRIAL RELEASE)

  Fixed:

  - Fix double filehandle close error with tee on Windows
    (which started warning during the perl 5.21.x series,
    causing tests to fail)

0.28      2015-02-11 06:39:51-05:00 America/New_York

  Tests:

  - Removes test that optionally uses Inline::C to avoid spurious
    test failures.  Also Inline::C had become a fairly heavy
    (if optional) dependency.

  Docs:

  - Clarify that PERL_CAPTURE_TINY_TIMEOUT is an internal control,
    not a timeout of the code reference being captured.

0.27      2014-11-04 23:10:44-05:00 America/New_York

  Prereqs:

  - Make Inline::C recommended, not required

0.26      2014-11-04 06:55:15-05:00 America/New_York

  Tests:

  - Actually check for Inline::C in tests, not just Inline

0.25      2014-08-16 10:08:42-04:00 America/New_York

  Prereqs:
